Upgraded to JVM 21 and Barrage 0.32.0 (#262)